sync language and bump version

--- a/app/assets/locales/locale-fr.json
+++ b/app/assets/locales/locale-fr.json
@@ -1791,6 +1791,11 @@
         "proposal_update": "{account} a mis à jour une transaction proposée",
         "publish_feed": "{account} a publié un nouveau flux de {price}",
         "reg_account": "{registrar} a créé le compte {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} a choisi {proxy} pour son nouveau proxy",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2601,6 +2606,11 @@
             "proposal_create": "Création d'une proposition",
             "proposal_delete": "Suppresion d'une proposition",
             "proposal_update": "Mise à jour d'une proposition",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Transfert",
             "transfer_from_blind": "Transfer from blinded account",
