--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -1791,6 +1791,11 @@
         "proposal_update": "{account} ha aggiornato una proposta di transazione",
         "publish_feed": "{account} ha pubblicato un feed price di {price}",
         "reg_account": "{registrar} ha registrato l'account {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} ha scelto {proxy} come suo proxy di voto",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2601,6 +2606,11 @@
             "proposal_create": "Crea proposta",
             "proposal_delete": "Cancella proposta",
             "proposal_update": "Aggiorna proposta",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Trasferimento",
             "transfer_from_blind": "Trasferisci da blinded account",
