--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -1791,6 +1791,11 @@
         "proposal_update": "{account}は取引提案を更新しました",
         "publish_feed": "{account}はフィード価格 {price}を公開しました",
         "reg_account": "{registrar}は{new_account}のアカウントを登録しました",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account}は投票代理人に{proxy}を設定しました",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2601,6 +2606,11 @@
             "proposal_create": "提案を作成",
             "proposal_delete": "提案を削除",
             "proposal_update": "提案を更新",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "転送",
             "transfer_from_blind": "匿名アカウントからの転送",
