--- a/app/assets/locales/locale-ko.json
+++ b/app/assets/locales/locale-ko.json
@@ -1791,6 +1791,11 @@
         "proposal_update": "{account} updated a proposed transaction",
         "publish_feed": "{account} published feed price of {price}",
         "reg_account": "{registrar} registered the account {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} set {proxy} as their voting proxy",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2601,6 +2606,11 @@
             "proposal_create": "제안서 생성",
             "proposal_delete": "제안서 삭제",
             "proposal_update": "제안서 업데이트",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "전송",
             "transfer_from_blind": "Transfer from blinded account",
