--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1797,6 +1797,11 @@
         "proposal_update": "{account} обновил предложение",
         "publish_feed": "{account} опубликовал котировки {price}",
         "reg_account": "{registrar} зарегистрировал аккаунт {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} установил {proxy} в качестве своего прокси для голосования",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2607,6 +2612,11 @@
             "proposal_create": "Создание предложения",
             "proposal_delete": "Удаление предложения",
             "proposal_update": "Обновление предложения",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Перевод",
             "transfer_from_blind": "Перевод со слепого аккаунта",
