--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -1791,6 +1791,11 @@
         "proposal_update": "{account} bir teklif işlemi güncelledi",
         "publish_feed": "{account} fiyat duyurdu: {price}",
         "reg_account": "{registrar} kayıt yaptırdı - Hesap adı: {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} oy kullanması için {proxy} adlı hesabı vekil tayin etti",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2601,6 +2606,11 @@
             "proposal_create": "Teklif oluşturma",
             "proposal_delete": "Teklif silme",
             "proposal_update": "Teklif güncelleme",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Bilet oluştur",
             "transfer": "Gönder",
             "transfer_from_blind": "Kör hesaptan transfer et",
