--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -1797,6 +1797,11 @@
         "proposal_update": "{account} hat Transaktionsvorschlag geändert.",
         "publish_feed": "{account} hat eine Preisangabe von {price} veröffentlicht.",
         "reg_account": "{registrar} hat das Konto {newaccount} registriert.",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} hat {proxy} als seinen Vertreter eingestellt.",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2607,6 +2612,11 @@
             "proposal_create": "Vorschlag erstellen",
             "proposal_delete": "Vorschlag löschen",
             "proposal_update": "Vorschlag aktualisieren",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Überweisung",
             "transfer_from_blind": "Überweisung von blindem Konto",
