--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -1797,6 +1797,11 @@
         "proposal_update": "{account} transacción propuesta creada",
         "publish_feed": "{account} publicò precio de suministro de {price}",
         "reg_account": "{registrar} Cuenta registrada {new_account}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
+        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
+        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
+        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_update": "{account} update flash loan #{id}.",
         "set_proxy": "{account} set {proxy} como su proxy de voto",
         "ticket_create": "{account} locked away {amount} in a ticket",
         "ticket_types": {
@@ -2607,6 +2612,11 @@
             "proposal_create": "Crear propuesta",
             "proposal_delete": "Eliminar propuesta",
             "proposal_update": "Actualizar propuesta",
+            "samet_fund_borrow": "Borrow flash loan",
+            "samet_fund_create": "Create flash loan",
+            "samet_fund_delete": "Delete flash loan",
+            "samet_fund_repay": "Repay flash loan",
+            "samet_fund_update": "Update flash loan",
             "ticket_create": "Create ticket",
             "transfer": "Transferencia",
             "transfer_from_blind": "Transferencia desde cuenta cegada",
