Add Credit Offer feature (#3462)
* add creditoffer features

* minor adjustment to colors, wording and header behavior

Co-authored-by: Stefan <toleantech@gmail.com>

--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -445,7 +445,8 @@
             "white_by": "被列入白名单",
             "whitelist_authorities": "白名单权限",
             "whitelist_market_fee_sharing": "白名单分享市场手续费"
-        }
+        },
+        "credit_offer": "借贷管理"
     },
     "account_browsing_mode": {
         "go_back": "返回我的账户",
@@ -1325,6 +1326,7 @@
         "deposit-withdraw": "充币/提币",
         "deposit_legacy": "或传统充币",
         "exchange": "交易中心",
+        "p2p_lending": "P2P借贷",
         "explorer": "区块浏览",
         "help": "帮助",
         "insight": "认识",
@@ -2971,5 +2973,59 @@
         "wif_associated_accounts": "关联账户(s)：",
         "wif_import_error": "请输入有效的WIF-钱包导入格式",
         "wif_length_error": "输入长度不正确"
+    },
+    "credit_offer": {
+        "create": "创建P2P抵押贷",
+        "edit": "修改P2P抵押贷",
+        "accepted_pawn": "可接受抵押物",
+        "price": "价格",
+        "operate": "操作",
+        "operate_edit": "修改",
+        "operate_delete": "删除",
+        "whitelist_account": "白名单账号",
+        "loan_amount": "借款额度",
+        "add_pawn": "添加抵押物",
+        "add_whitelist": "添加白名单",
+        "title_add_pawn": "添加可抵押资产",
+        "pawn_amount": "抵押数量",
+        "tip_pawn_amount": "每借出一个单位的资产所需要抵押的数量",
+        "title_add_whitelist": "添加白名单",
+        "account": "账号",
+        "repay_period": "还款期限",
+        "min_borrow": "最低借款",
+        "fee_rate": "手续费率",
+        "tip_fee_rate": "以百分比表示",
+        "validity_period": "有效期",
+        "plh_select_validity_period": "选择有效期",
+        "list_repay_period": {
+            "period_0": "12小时",
+            "period_1": "1天",
+            "period_2": "3天",
+            "period_3": "7天",
+            "period_4": "30天",
+            "period_5": "90天"
+        },
+        "info_borrow_err": "不能向自己借款！",
+        "asset": "资产",
+        "total_amount": "总数量",
+        "available_amount": "可借数量",
+        "mortgage_assets": "抵押资产",
+        "borrow": "借款",
+        "borrow_amount": "借款数量",
+        "current_balance": "剩余可借",
+        "estimated_fee": "预估手续费",
+        "plh_input_asset_name": "请输入资产名...",
+        "credit_offers": "P2P抵押贷列表",
+        "credit_rights": "P2P债权列表",
+        "credit_debts": "P2P债务列表",
+        "status": "状态",
+        "active": "激活",
+        "closed": "关闭",
+        "repay": "还款",
+        "my_debt": "我的负债",
+        "debt": "负债",
+        "redemption_collateral": "赎回抵押物",
+        "credit_right_account": "债权账号",
+        "credit_debt_account": "债务账号"
     }
 }
