streamline wording and fix bug when loading non-bitassets

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -904,7 +904,7 @@
                 "external_feed_price": "Feed price (derived from price feeds and other parameters)",
                 "feed_lifetime": "Feed lifetime (hours)",
                 "feed_price": "Feed price",
-                "global_settlement_price": "Global settlement Price will be",
+                "global_settlement_price": "Global settlement price will be",
                 "global_settlement_trigger": "Global settlement happens at price",
                 "maintenance_collateral_ratio": "Maintenance collateral ratio (MCR)",
                 "maximum_short_squeeze_price": "Maximum short squeeze price (MSSP)",
@@ -949,11 +949,11 @@
                 "price": "Price",
                 "settle_remaining_volume": "Remaining settleable volume",
                 "settlement_funds": "Settlement Funds",
-                "settlement_funds_collateral_ratio": "Settlement Fund Collateral Ratio",
-                "settlement_price": "Force Settlement Price",
+                "settlement_funds_collateral_ratio": "Settlement fund collateral ratio",
+                "settlement_price": "Force settlement price",
                 "title": "Settlement",
-                "force_settle_fee_percent": "Force Settlement Fee",
-                "black_swan_response_method": "Black swan response method",
+                "force_settle_fee_percent": "Force settlement fee",
+                "black_swan_response_method": "Global settlement response method (BSRM)",
                 "individual_settlement_fund": "Individual settlement fund",
                 "individual_settlement_debt": "Individual settlement debt"
             },
