Add tx qrcode #2657 (#3454)
* fix bug #3447

* fix appveyor issue

* fix github action bug

* fix github action bug

* add tr qrcode in TransactionConfirm

* add qr icon and adjust positioning

Co-authored-by: Stefan <toleantech@gmail.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2665,6 +2665,9 @@
         },
         "vesting_balance_create": "created vesting balance of",
         "view_json": "Show raw json",
+        "view_qrcode": "Show Trx QR code",
+        "view_qr": "Show QR",
+        "title_qrcode": "Transaction QR Code",
         "waiting": "Waiting for confirmation..",
         "whitelist_states": {
             "black_listed": "Blacklisted",
