fine tuning transaction information

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1799,11 +1799,11 @@
         "call_order_update": "{account} changed {debtSymbol} debt by {debt} and collateral by {collateral}",
         "committee_member_update_global_parameters": "{account} updated the global committee parameters",
         "credit_deal_expired": "{account} credit deal has expired.",
-        "credit_deal_repay": "{account} repays {amount} to credit offer，fee: {fee}.",
-        "credit_offer_accept": "{account} borrows {amount} from credit offer.",
-        "credit_offer_create": "{account} create a credit offer of {amount}，fee rate: {fee}.",
-        "credit_offer_delete": "{account} deleted credit offer #{id}.",
-        "credit_offer_update": "{account} update a credit offer #{id}.",
+        "credit_deal_repay": "{account} repays {amount} to credit offer with fee {fee}",
+        "credit_offer_accept": "{account} borrows {amount} from credit offer",
+        "credit_offer_create": "{account} create a credit offer of {amount} with fee rate {fee}",
+        "credit_offer_delete": "{account} deleted credit offer {id}",
+        "credit_offer_update": "{account} update a credit offer {id}",
         "fill_order_buy": "{account} bought {amount} at {price} for order #%(order)s",
         "fill_order_sell": "{account} sold {amount} at {price} for order #%(order)s",
         "htlc_create": "{from} locked {amount} for {to} to redeem until {lock_period}",
@@ -1815,11 +1815,11 @@
         "limit_order_buy": "{account} placed order %(order)s to buy {amount} at {price}",
         "limit_order_cancel": "{account} cancelled order #%(order)s",
         "limit_order_sell": "{account} placed order %(order)s to sell {amount} at {price}",
-        "liquidity_pool_create": "{account} create a liquidity pool: {asset_a}-{asset_b}.",
-        "liquidity_pool_delete": "{account} deleted a liquidity pool #{id}.",
-        "liquidity_pool_deposit": "{account} add liquidity #{id}. paid {amount_a} and {amount_b}. received {received}.",
-        "liquidity_pool_exchange": "{account} seal the deal, paid {amount_a}, received {amount_b}.",
-        "liquidity_pool_withdraw": "{account} remove liquidity #{id}. paid {amount_c}. received {amount_a} and {amount_b}.",
+        "liquidity_pool_create": "{account} created liquidity pool {id} with {asset_a} and {asset_b}",
+        "liquidity_pool_delete": "{account} deleted liquidity pool {id}",
+        "liquidity_pool_deposit": "{account} added liquidity {amount_a} and {amount_b} to liquidity pool {id}",
+        "liquidity_pool_exchange": "{account} exchanged {amount_a} for {amount_b} from liquidity pool {id}",
+        "liquidity_pool_withdraw": "{account} removed liquidity {amount_a} and {amount_b} from liquidity pool {id}",
         "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
         "samet_fund_update": "{account} update flash loan #{id}.",
         "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
