--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1820,11 +1820,11 @@
         "liquidity_pool_deposit": "{account} added liquidity {amount_a} and {amount_b} to liquidity pool {id}",
         "liquidity_pool_exchange": "{account} exchanged {amount_a} for {amount_b} from liquidity pool {id}",
         "liquidity_pool_withdraw": "{account} removed liquidity {amount_a} and {amount_b} from liquidity pool {id}",
-        "samet_fund_create": "{account} creates a flash loan of {amount}, fee rate: {fee}.",
-        "samet_fund_update": "{account} update flash loan #{id}.",
-        "samet_fund_delete": "{account} delete flash loan #{id}, get back {amount}.",
-        "samet_fund_borrow": "{account} lent {amount} from flash loan #{id}.",
-        "samet_fund_repay": "{account} repays flash loan #{id} {amount}, fee: {fee}.",
+        "samet_fund_create": "{account} created flash loan of {amount} with fee rate {fee}",
+        "samet_fund_update": "{account} update flash loan {id}",
+        "samet_fund_delete": "{account} delete flash loan {id} with get back {amount}",
+        "samet_fund_borrow": "{account} lent {amount} from flash loan {id}",
+        "samet_fund_repay": "{account} repays flash loan {id} {amount} with fee {fee}",
         "no_recent": "No recent transactions",
         "override_transfer": "{issuer} transferred {amount} from {from} to {to}",
         "pending": "pending %(blocks)s blocks",
